--- a/sections/oupc/SubSection1/style.scss
+++ b/sections/oupc/SubSection1/style.scss
@@ -18,7 +18,7 @@
 
 .slide-img {
   width: 100%;
-  height: 100%;
+  height: 60vh !important;
   object-fit: cover;
 }
 
@@ -108,5 +108,57 @@
   }
   40% {
     transform: rotate(45deg) translate(0, 0);
+  }
+}
+
+.key-visual-container-pc {
+  position: relative !important;
+  margin: 0;
+  padding: 0;
+
+  .key-visual-text {
+    position: absolute;
+    margin-top: auto;
+    margin-bottom: auto;
+    top: 0;
+    bottom: 0;
+    left: 2rem;
+    height: 15rem;
+    max-width: 25rem;
+
+    h1 {
+      font-size: 3.5rem;
+      font-weight: 900;
+    }
+  }
+}
+
+.key-visual-container-sm {
+  margin: 0;
+  padding: 0;
+  position: relative !important;
+  height: 40rem;
+
+  .key-visual-row {
+    position: relative !important;
+  }
+
+  .key-visual-img img {
+    height: 30rem !important;
+  }
+
+  .key-visual-text {
+    position: absolute;
+    top: 25rem;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
+    width: 98vw;
+
+    h1 {
+      font-size: 3.5rem;
+      font-weight: 900;
+    }
   }
 }
