--- a/sections/oupc/SubSection1/style.scss
+++ b/sections/oupc/SubSection1/style.scss
@@ -128,7 +128,8 @@
 
     h1 {
       font-size: 3.5rem;
-      font-weight: 900;
+      font-family: 'Zen Maru Gothic';
+      font-weight: 700;
     }
   }
 }
@@ -158,7 +159,8 @@
 
     h1 {
       font-size: 3.5rem;
-      font-weight: 900;
+      font-family: 'Zen Maru Gothic';
+      font-weight: 700;
     }
   }
 }
