メンバーセクションの作成 #issue3

--- a/sections/oupc/SubSection7/style.scss
+++ b/sections/oupc/SubSection7/style.scss
@@ -13,3 +13,10 @@
     // background: url('~@/assets/img/gonuxt/sample01.jpg');
   }
 }
+
+.imgsizes {
+  display: block;
+  margin: auto;
+  width: 12rem;
+  height: 12rem;
+}
