#8 年間スケジュールの完成

--- a/sections/oupc/SubSection4/style.scss
+++ b/sections/oupc/SubSection4/style.scss
@@ -13,3 +13,8 @@
     // background: url('~@/assets/img/gonuxt/sample01.jpg');
   }
 }
+.img {
+  display: block;
+  text-align: center;
+  marigin: 0 auto;
+}
