made event section

--- a/sections/oupc/SubSection2/style.scss
+++ b/sections/oupc/SubSection2/style.scss
@@ -5,3 +5,42 @@
     padding: 0.25rem;
   }
 }
+
+.card-item {
+  margin: 0 10px 0 10px;
+  width: 360px;
+  height: 320px;
+}
+
+.card-item2 {
+  elevation: 0;
+  margin: 10px 10px 10px 10px;
+  width: 340px;
+  height: 180px;
+}
+
+.card-item3 {
+  elevation: 0;
+  margin: 0 0 0 0;
+  width: 360px;
+  height: 60px;
+}
+
+.card-text {
+  color: white;
+  text-align: left;
+}
+
+.card-title {
+  color: white;
+  text-align: center;
+}
+
+.btn-item {
+  margin: 0 0 10px 0;
+}
+
+.sheet-item1 {
+  width: 70px;
+  height: 40px;
+}
