--- a/sections/oupc/TopSection/style.scss
+++ b/sections/oupc/TopSection/style.scss
@@ -123,7 +123,7 @@
     top: 0;
     bottom: 0;
     left: 2rem;
-    height: 15rem;
+    height: 22rem;
     max-width: 25rem;
 
     h1 {
@@ -138,7 +138,7 @@
   margin: 0;
   padding: 0;
   position: relative !important;
-  height: 40rem;
+  height: 50rem;
 
   .key-visual-row {
     position: relative !important;
@@ -156,9 +156,10 @@
     left: 0;
     right: 0;
     width: 98vw;
+    max-width: 25rem;
 
-    h1 {
-      font-size: 3.5rem;
+    h2 {
+      font-size: 2.5rem;
       font-family: 'Zen Maru Gothic';
       font-weight: 700;
     }
