change color and layout

--- a/sections/oupc/MemberSection/style.scss
+++ b/sections/oupc/MemberSection/style.scss
@@ -25,3 +25,12 @@
 .top-half {
   object-position: 50% 0%;
 }
+
+.b-color1 {
+  border-color: grey;
+  border-style: solid;
+  border-width: 5px;
+  width: 150px;
+  height: 150px;
+  padding: 10px;
+}
