--- a/sections/oupc/MessageSection/style.scss
+++ b/sections/oupc/MessageSection/style.scss
@@ -1,19 +1,23 @@
 @import '@/assets/styles/app';
 
 .txt1 {
-  font-size: 1.2rem;
+  font-size: 2.8vh;
 }
 
 .txt2 {
-  font-size: 1rem;
+  font-size: 2vh;
 }
 
 .txt3 {
-  font-size: 0.6rem;
+  font-size: 2vh;
 }
 
 .font-txt {
   font-family: '游ゴシック体', YuGothic, 'YuGothic M', sans-serif;
+}
+
+.border-0 {
+  border-radius: 10px;
 }
 
 @media screen and (min-width: 600px) {
