change text message and font size

--- a/sections/oupc/MessageSection/style.scss
+++ b/sections/oupc/MessageSection/style.scss
@@ -1,11 +1,15 @@
 @import '@/assets/styles/app';
 
+.border-2 {
+  border-radius: 70px;
+}
+
 .txt1 {
   font-size: min(calc((100vw - 10rem) / 15), 1.53rem);
 }
 
 .txt2 {
-  font-size: min(calc((100vw - 10rem) / 15 * 0.85), 1.3rem);
+  font-size: min(calc((100vw - 10rem) / 15 * 0.85), 1.1rem);
 }
 
 .txt3 {
