--- a/sections/oupc/TopSection/style.scss
+++ b/sections/oupc/TopSection/style.scss
@@ -123,16 +123,22 @@
     top: 0;
     bottom: 0;
     left: 2rem;
-    height: 40rem;
+    height: min(40vh, 40rem);
     max-width: 100rem;
 
     h1 {
-      font-size: 6.5rem;
+      font-size: min(6.5rem, 6.5vh);
       font-family: 'Zen Maru Gothic';
       font-weight: 700;
     }
+    h2 {
+      font-size: min(6rem, 6vh);
+      line-height: min(6rem, 6vh);
+      font-weight: 700;
+      font-family: 'Roboto', sans-serif !important;
+    }
     h3 {
-      font-size: 2.5rem;
+      font-size: min(2.5rem, 2.5vh);
     }
   }
 }
